# finalbenchmark-platform

./: .gitignore  PROJECT_SUMMARY.md  RANKINGS_CODE_SNIPPETS.md  RANKINGS_COMPLETE.md  RANKINGS_DELIVERY_SUMMARY.md  RANKINGS_EXACT_CHANGES.md  RANKINGS_IMPLEMENTATION.md  RANKINGS_QUICK_REFERENCE.md  README.md  README_NATIVE_BUILD.md  benchmark_logs.txt  build_android_native.sh  build_check_animation_final_dots.txt  build_error.txt  com.ivarna.finalbenchmark2.yml  cpu.config  cpu_benchmark_info.md  fdroid-metadata-template.yml  gradle.properties  settings.gradle.kts  verify_optimizations.sh
.agent/workflows/: fix.md
.kilocode/rules/: instructions.md  project-info.md
.kilocode/workflows/: build-fast.md  build.md  fix.md  implement-feature.md
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cpu_affinity.cpp  vulkan_info.cpp
app/src/main/java/com/ivarna/finalbenchmark2/: BenchmarkForegroundService.kt  FinalBenchmark2Application.kt  MainActivity.kt
app/src/main/java/com/ivarna/finalbenchmark2/aiBenchmark/: AiBenchmarkManager.kt  ModelDownloader.kt
app/src/main/java/com/ivarna/finalbenchmark2/cpuBenchmark/: BenchmarkCategory.kt  BenchmarkEvent.kt  BenchmarkManager.kt  BenchmarkName.kt  CpuAffinityManager.kt  CpuBenchmarkNative.kt  CpuTopologyDetector.kt  KotlinBenchmarkManager.kt
app/src/main/java/com/ivarna/finalbenchmark2/cpuBenchmark/algorithms/: BenchmarkHelpers.kt  MultiCoreBenchmarks.kt  SingleCoreBenchmarks.kt
app/src/main/java/com/ivarna/finalbenchmark2/data/database/: AppDatabase.kt
app/src/main/java/com/ivarna/finalbenchmark2/data/database/dao/: BenchmarkDao.kt
app/src/main/java/com/ivarna/finalbenchmark2/data/database/entities/: BenchmarkResultEntity.kt  BenchmarkWithCpuData.kt  CpuTestDetailEntity.kt  GenericTestDetailEntity.kt
app/src/main/java/com/ivarna/finalbenchmark2/data/repository/: HistoryRepository.kt
app/src/main/java/com/ivarna/finalbenchmark2/di/: DatabaseModule.kt
app/src/main/java/com/ivarna/finalbenchmark2/navigation/: BenchmarkNavigation.kt  FrostedGlassNavigation.kt  MainNavigation.kt
app/src/main/java/com/ivarna/finalbenchmark2/ui/components/: AnimatedGlassCard.kt  BatteryTemperatureGraph.kt  ContextualPermissionRequest.kt  CpuTemperatureGraph.kt  CpuUtilizationGraph.kt  EmptyStateView.kt  GlassCard.kt  GpuDataPoint.kt  GpuFrequencyCard.kt  GpuUtilizationGraph.kt  PowerConsumptionGraph.kt  PowerDataPoint.kt  ResultCpuGraph.kt  ResultPowerGraph.kt
app/src/main/java/com/ivarna/finalbenchmark2/ui/models/: SystemModels.kt
app/src/main/java/com/ivarna/finalbenchmark2/ui/screens/: BenchmarkDeviceSummary.kt  BenchmarkScreen.kt  CpuComparisonScreen.kt  DetailedResultScreen.kt  DeviceScreen.kt  GlassTimerPill.kt  HardwareTabContent.kt  HistoryDetailScreen.kt  HistoryScreen.kt  HomeScreen.kt  OnboardingPagerScreen.kt  OsTabContent.kt  PerformanceMonitoringSection.kt  PermissionsScreen.kt  PowerCalibrationScreen.kt  RankingsScreen.kt  ResultScreen.kt  RootCheckScreen.kt  SensorsTabContent.kt  SettingsScreen.kt  ThemeSelectionScreen.kt  WelcomeScreen.kt
app/src/main/java/com/ivarna/finalbenchmark2/ui/theme/: Color.kt  Theme.kt  ThemeManager.kt  Type.kt
app/src/main/java/com/ivarna/finalbenchmark2/ui/viewmodels/: BenchmarkViewModel.kt  DeviceViewModel.kt  GpuInfoViewModel.kt  HistoryViewModel.kt  MainViewModel.kt  OsViewModel.kt  RankingViewModel.kt  SensorViewModel.kt  SystemMonitorViewModel.kt
app/src/main/java/com/ivarna/finalbenchmark2/utils/: CpuUtilizationCorrectedTest.kt  CpuUtilizationUtils.kt  DeviceInfo.kt  DisplayUtils.kt  GpuFrequencyCache.kt  GpuFrequencyFallback.kt  GpuFrequencyMonitor.kt  GpuFrequencyReader.kt  GpuInfoDataClasses.kt  GpuMonitor.kt  GpuPaths.kt  GpuVendorDetector.kt  OsUtils.kt  PowerConsumptionPreferences.kt  PowerUtils.kt  RootCommandExecutor.kt  RootUtils.kt  SensorUtils.kt  TemperatureUtils.kt  ThemePreferences.kt  VulkanNativeBridge.kt
app/src/main/res/drawable/: arrow_expand_24.xml  cpu_24.xml  history_24.xml  ic_instagram.xml  ic_portfolio.xml  ic_twitter_x.xml  instagram_icon.xml  power_consumption_24.xml  web_icon.xml  x_icon.xml
app/src/test/java/com/ivarna/finalbenchmark2/: BenchmarkManagerTest.kt.bak
app/src/test/java/com/ivarna/finalbenchmark2/utils/: GpuFrequencyReaderTest.kt
benchmark/cpu_benchmark/: Cargo.toml
benchmark/cpu_benchmark/src/: algorithms.rs  android_affinity.rs  ffi.rs  jni_interface.rs  lib.rs  main.rs  main.rs.backup  utils.rs
docs/: features.md
docs/benchmark/: aiml.md  cpu.md  gpu_external.md  gpu_native.md  index.md  productivity.md  ram.md  storage.md
docs/components/: BottomNavigationBar.md  README_GPU_FREQ.md  REFERENCE_DEVICES.md  benchmark_json.md  cpu_benchmark_info.md  json_structure_verification_report.md
docs/cpu/: BENCHMARKS.md  CURRENT_PROBLEMS.md  OVERVIEW.md  README.md  RUN_RULES.md  SCORING.md
docs/database/: database_schema.md  er.md
docs/modes/: efficiency.md  full.md  throttle.md
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/en-US/changelogs/: 3.txt  4.txt  5.txt
gradle/: libs.versions.toml
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppBar.tsx
