[package]
name = "cpu_benchmark"
version = "0.1.0"
edition = "2021"

[lib]
name = "cpu_benchmark"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rayon = "1.10"
sha2 = "0.10"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num_cpus = "1.16"
jni = "0.21"
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"

[dev-dependencies]

[profile.release]
# Maximum optimization level (equivalent to -O3)
opt-level = 3

# Enable Link-Time Optimization (LTO)
# "fat" LTO provides maximum optimization
lto = "fat"

# Use single codegen unit for maximum optimization
# This allows LLVM to see the entire crate at once
codegen-units = 1

# Abort on panic instead of unwinding
# Smaller binary size and slightly faster
panic = "abort"

# Strip symbols from binary
# Reduces binary size significantly
strip = true

# Disable overflow checks for performance
overflow-checks = false

# Debug assertions OFF in release
debug-assertions = false

# No debug info in release builds
debug = false

[profile.dev]
# Keep some optimization even in debug mode for testing
opt-level = 2
